# play-cli

./: .gitignore  Cargo.toml  README.md  alias.sh  install.sh  temp.sh
final/ts-node/: package.json
src/: main.rs
templates/ts-express/: package-lock.json  package.json
templates/ts-express/src/: server.ts
templates/ts-node/: package-lock.json  pnpm-lock.yaml
templates/ts-node/src/: index.ts
templates/ts-node/src/middleware/: auth.ts
