[package]
name = "play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive", "string"] }
dirs = "5.0.0"
ignore = "0.4.20"
memorable-wordlist = "0.1.7"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
